# snnet-onnx

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run_cmake.sh  snnet-onnx
include/common/: image_loader.h
include/opencv2/: opencv_modules.hpp
include/snnet/: constants.h  stitch_config.h
pretrained/onnx/: deit_base_patch16_224_embed.onnx  deit_base_patch16_224_head.onnx  deit_sl_10.onnx  deit_sl_13.onnx  deit_sl_16.onnx  deit_sl_20.onnx  deit_sl_22.onnx  deit_sl_25.onnx  deit_sl_30.onnx  deit_sl_33.onnx  deit_sl_36.onnx  deit_sl_39.onnx  deit_sl_41.onnx  deit_sl_46.onnx  deit_sl_49.onnx  deit_sl_5.onnx  deit_sl_50.onnx  deit_sl_55.onnx  deit_sl_56.onnx  deit_sl_61.onnx  deit_sl_63.onnx  deit_sl_66.onnx  deit_sl_69.onnx  deit_sl_7.onnx  deit_small_patch16_224_embed.onnx  deit_small_patch16_224_head.onnx  deit_tiny_patch16_224_embed.onnx  deit_tiny_patch16_224_head.onnx  deit_tiny_patch16_224_layer_0.onnx  deit_tiny_patch16_224_layer_1.onnx  deit_tiny_patch16_224_layer_10.onnx  deit_tiny_patch16_224_layer_11.onnx  deit_tiny_patch16_224_layer_2.onnx  deit_tiny_patch16_224_layer_3.onnx  deit_tiny_patch16_224_layer_4.onnx  deit_tiny_patch16_224_layer_5.onnx  deit_tiny_patch16_224_layer_6.onnx  deit_tiny_patch16_224_layer_7.onnx  deit_tiny_patch16_224_layer_8.onnx  deit_tiny_patch16_224_layer_9.onnx
src/: Helper.cpp  image_loader.cpp  main.cpp  stitch_config.cpp  test-resnet50v2.cpp  test-stitchlayers.cpp  test-vitlayers.cpp
